concord_macros/tests/trybuild/fail/codegen_contract/removed_internal_alias.rs
fn main() {
    let _ = concord_core::internal::GENERATED_API_COMPATIBILITY;
}
